core: Add a helper to require a minimum Gradle version for project plugins